--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -62,8 +63,8 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
-    "react-paginate": "^8.2.0",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
@@ -81,8 +82,8 @@
     "@types/node": "^22.7.3",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "@types/react-slick": "^0.23.13",
     "@types/react-modal": "^3.16.3",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
