--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "react-youtube": "^10.1.0",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1",
