--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@tanstack/react-query-devtools": "^5.60.5",
     "@types/youtube": "^0.1.0",
+    "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,6 +54,7 @@
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
+    "firebase": "^11.0.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
