--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
+    "@remix-run/router": "^1.21.0",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-query-devtools": "^5.60.5",
@@ -57,6 +58,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.2.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -66,10 +68,10 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
-    "react-paginate": "^8.2.0",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^7.0.1",
+    "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
@@ -86,8 +88,8 @@
     "@types/node": "^22.7.3",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "@types/react-slick": "^0.23.13",
     "@types/react-modal": "^3.16.3",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
