--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
