--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.61.0",
     "@tanstack/react-query-devtools": "^5.60.5",
+    "@types/leaflet": "^1.9.15",
     "@types/youtube": "^0.1.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
@@ -58,9 +59,10 @@
     "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^11.0.2",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.14.1",
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -69,6 +71,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
